--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -86,3 +86,4 @@ error.wordOneSpecialChar=Utilice los caracteres especiales
 message.login.notification.deviceDetails=Detalles del dispositivo:
 message.login.notification.location=Ubicacion:
 message.login.notification.ip=Direccion IP:
+label.form.loginRussian=Ruso
