--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -91,3 +91,4 @@ error.wordOneSpecialChar=Use special characters
 message.login.notification.deviceDetails=Device details:
 message.login.notification.location=Location:
 message.login.notification.ip=IP Address:
+label.form.loginRussian=Russian
